--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,4 @@
 .settings/
 .recommenders/
 .metadata/
-arm.boot/arm-gnu-toolchain-12.2.mpacbti-bet1-x86_64-arm-none-eabi/
+arm.boot/arm-gnu-toolchain/
