Add a telnet connection serial line #week1.steep3

--- a/arm.boot/Makefile
+++ b/arm.boot/Makefile
@@ -34,7 +34,7 @@ QEMU_LOADER=-device loader,file=kernel.elf
 #   attach via a shell, on a the matching port:
 #     $ telnet locahost 4321
 #-------------------------------------------------------------------
-QEMU_SERIAL=-serial mon:stdio
+QEMU_SERIAL=-serial mon:stdio -serial telnet:localhost:4321,server,nowait
 
 #-------------------------------------------------------------------
 # Prefix for the toolchain, like:
