--- a/arm.boot/Makefile
+++ b/arm.boot/Makefile
@@ -7,7 +7,7 @@ QEMU_MACHINE=versatilepb
 ifeq ($(QEMU_MACHINE),versatileab) 
   QEMU_CPU=arm926
   QEMU_MEMORY=1M
-  ASFLAGS=-mcpu=arm926ej-s 
+  ASFLAGS= 
   CFLAGS= -DBOARD_VERSATILEAB -mcpu=arm926ej-s
 endif
 
@@ -57,7 +57,7 @@ LDFLAGS= -g -T kernel.ld
 #-------------------------------------------------------------------
 # Object file list
 #-------------------------------------------------------------------
-OBJS= vector.o reset.o uart.o main.o kprintf.o shell.o string.o
+OBJS= vector.o reset.o uart.o main.o kprintf.o shell.o string.o # irqs.o vic.o cb.o
 
 #-------------------------------------------------------------------
 # Compilation rules
