Add code for interrupt support

--- a/arm.boot/Makefile
+++ b/arm.boot/Makefile
@@ -57,7 +57,7 @@ LDFLAGS= -g -T kernel.ld
 #-------------------------------------------------------------------
 # Object file list
 #-------------------------------------------------------------------
-OBJS= vector.o reset.o uart.o main.o kprintf.o shell.o shell_buffer.o string.o console.o cb.o irqs.o vic.o
+OBJS= vector.o reset.o uart.o main.o kprintf.o shell.o shell_buffer.o string.o console.o cb.o vic.o irqs.o interrupts.o
 
 #-------------------------------------------------------------------
 # Compilation rules
